08-module/policies/np-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-deny-all-ingress
spec:
  podSelector: {} # Selects all pods in the namespace
  policyTypes:
  - Ingress
